--- a/appupdate.json
+++ b/appupdate.json
@@ -2,9 +2,9 @@
     "error": false,
     "results":
         {
-            "app": "假装看天气",
-            "versionCode": 10,
-            "versionName": "1.2.6",
+            "app": "什么天气",
+            "versionCode": 2,
+            "versionName": "1.1",
 	        "updateTime": "2017-02-04 13:14:00",
             "information": "解决Gank妹纸图加载失败时程序异常的bug\n新增查看全部公交线路的功能！",
             "foreUpdate": false,
