--- a/appupdate.json
+++ b/appupdate.json
@@ -8,6 +8,6 @@
 	        "updateTime": "2017-03-23 11:11:00",
             "information": "解决Gank妹纸图加载失败时程序异常的bug\n新增查看全部公交线路的功能！",
             "foreUpdate": false,
-            "url":"https://github.com/zzzengxiaoxian/WeatherMore/blob/master/smtq_v1.1.2_0170323.apk.apk?raw=true"
+            "url":"https://github.com/zzzengxiaoxian/WeatherMore/blob/master/smtq_v1.1.2_0170323.apk?raw=true"
         }
 }
